; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/http/extr_h2conn.c_vlc_h2_conn_queue_prio.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/http/extr_h2conn.c_vlc_h2_conn_queue_prio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_h2_conn = type { i32, i32 }
%struct.vlc_h2_frame = type { i32 }

@.str = private unnamed_addr constant [15 x i8] c"out (priority)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vlc_h2_conn*, %struct.vlc_h2_frame*)* @vlc_h2_conn_queue_prio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlc_h2_conn_queue_prio(%struct.vlc_h2_conn* %0, %struct.vlc_h2_frame* %1) #0 {
  %3 = alloca %struct.vlc_h2_conn*, align 8
  %4 = alloca %struct.vlc_h2_frame*, align 8
  store %struct.vlc_h2_conn* %0, %struct.vlc_h2_conn** %3, align 8
  store %struct.vlc_h2_frame* %1, %struct.vlc_h2_frame** %4, align 8
  %5 = load %struct.vlc_h2_conn*, %struct.vlc_h2_conn** %3, align 8
  %6 = getelementptr inbounds %struct.vlc_h2_conn, %struct.vlc_h2_conn* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.vlc_h2_frame*, %struct.vlc_h2_frame** %4, align 8
  %9 = call i32 @vlc_h2_frame_dump(i32 %7, %struct.vlc_h2_frame* %8, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %10 = load %struct.vlc_h2_conn*, %struct.vlc_h2_conn** %3, align 8
  %11 = getelementptr inbounds %struct.vlc_h2_conn, %struct.vlc_h2_conn* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.vlc_h2_frame*, %struct.vlc_h2_frame** %4, align 8
  %14 = call i32 @vlc_h2_output_send_prio(i32 %12, %struct.vlc_h2_frame* %13)
  ret i32 %14
}

declare dso_local i32 @vlc_h2_frame_dump(i32, %struct.vlc_h2_frame*, i8*) #1

declare dso_local i32 @vlc_h2_output_send_prio(i32, %struct.vlc_h2_frame*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
